* insns.def (defineclass), vm_insnhelper.c (vm_get_cvar_base): see   also inherited constants for classes without superclass and   modules.  [ruby-core:37698] [Bug #3423]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33157 b2dd03c8-39d4-4d8f-98ff-823fe69b080e